--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,14 @@
   --hover: #404bbf;
   --bg-fil-btn: #f4f4fd;
   --main-color: #434455;
-  --primery-font: Roboto, Verdana, Tahoma, sans-serif;
+  --primery-font: Roboto, sans-serif;
   --logo-font: Raleway, sans-serif;
   --color-filt-accent: #FFFFFF;
 }
 
 body {
   color: var(--main-color);
-  font-family: Roboto, Verdana, Tahoma, sans-serif;
+  font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -48,6 +48,9 @@ body {
 .active:focus {
 color: var(--hover);
 }
+.active {
+    text-decoration: none;
+}
 .header-nav {
     color: #2E2F42;
     font-weight: 500;
@@ -66,6 +69,7 @@ color: var(--hover);
     text-decoration: none;
     font-style: normal;
 }
+
 
 
 /**
@@ -90,7 +94,7 @@ color: var(--hover);
 .order-btn {
     background-color: #4d5ae5;
     color: var(--color-filt-accent);
-    font-family: Roboto, Verdana, Tahoma, sans-serif;
+    font-family: Roboto, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -107,6 +111,16 @@ color: var(--hover);
     letter-spacing: 0.02em;
     text-transform: capitalize;
 }
+.team {
+    background-color: #F4F4FD;
+}
+
+.list-team {
+    background-color: #FFFFFF;
+}
+.text-team {
+   font-size: 16px;
+} 
 /*Portfolio*/
 
 .btn-active:hover,
