--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,7 @@ color: var(--hover);
     letter-spacing: 0.02em;
     text-decoration: none;
 }
-.mail,
-.tel  {
+.contact {
     color: var(--main-color);
     font-weight: 400;
     font-size: 16px;
